Visualisation: https://dbdiagram.io/

Table Guild {
  ID int [pk]
  Name varchar(100)
  Description varchar(120)
}

Table Category {
  ID int [pk]
  Name varchar(100) [not null]
  Guild_ID int [ref: > Guild.ID]
}

Table Channel {
  ID int [pk]
  Name varchar(100) [not null]
  Type varchar [not null]
  Category_ID int [ref: > Category.ID]
}

Table Message {
  ID int [pk]
  Content varchar(4000) [not null]
  Channel_ID int [ref: > Channel.ID]
}

Table Role {
  ID int [pk]
  Name varchar(100) [not null]
  Color ulong
  IsHoisted bool
  IsMentioable bool
  BitwisePermissionFlag ulong [not null]
  Guild_ID int [ref: > Guild.ID]
}

Table OverriddenRole {
  ID int [pk]
  RoleName varchar
  AllowValue bigint [not null]
  DenyValue bigint [not null]
  Category_ID int [ref: > Category.ID, not null]
  Channel_ID int [ref: > Channel.ID]
}